# pytest-django-tutorial

./: .editorconfig  .env.template  .gitignore  .pylintrc  Dockerfile  Makefile  Pipfile  Procfile  README.md  README.rst  app.json  conftest.py  gunicorn.conf.py  manage.py  package-lock.json  package.json  setup.cfg  webpack.base.config.js  webpack.dev.config.js  webpack.prod.config.js
.circleci/: config.yml
apps/marketing/: urls.py  views.py
apps/marketing/templates/marketing/: landing.html
apps/marketing/tests/: test_views.py
apps/meme/: forms.py  img_flip_api.py  models.py  urls.py  views.py
apps/meme/migrations/: 0001_initial.py
apps/meme/templates/meme/: choose.html  create.html  memes.html
apps/meme/tests/: test_img_flip_api.py  test_smoke.py  test_views.py
apps/user/: forms.py  urls.py  views.py
apps/user/templates/user/: login.html  password_reset.html  password_reset_done.html  register.html  settings.html
apps/user/templates/user/email/: invite.html  password_reset_instructions.html
apps/user/templatetags/: user.py
apps/user/tests/: test_views.py
meme_creator/: __init__.py  settings.py  urls.py  version.py  views.py  wsgi.py
meme_creator/templates/meme_creator/: form.html  page.html
meme_creator/tests/: test_views.py
src/: main.js
src/meme_creator/theme/fonts/: toolkit-entypo.eot
src/meme_creator/theme/js/custom/: affix.js  enter.js  image-grid.js  stage.js  zoom.js
src/meme_creator/theme/scss/: components.scss  docs.scss  toolkit-bold.scss  toolkit-minimal.scss  toolkit-startup.scss  variables.scss
src/meme_creator/theme/scss/custom/: alerts-custom.scss  animation.scss  block.scss  callouts.scss  cards-bold.scss  carousel-light.scss  featured-list.scss  iconlist.scss  modal-custom.scss  nav-custom.scss  nav-heading.scss  navbar-transparent.scss  pull-quote.scss  stage.scss  text-ribbon.scss  zoom.scss
