[metadata]
name = meme_creator
author = Wes Kendall
summary = Meme generator app for pytest django talk
description-file = README.rst
home-page = https://github.com/wesleykendallpytest-django-tutorial
requires-python = >=3.5
classifier =
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[coverage:run]
branch = True
source = .

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Dont cover definsive assertion code
    raise AssertionError
    raise NotImplementedError

    # Lexical noop
    pass
omit =
    .venv*
    conftest.py
    */*/test_smoke*.py
    meme_creator/urls.py
    meme_creator/wsgi.py
    meme_creator/settings.py
    manage.py
    apps/*/migrations/*
    apps/*/fixtures/*
    meme_creator/fixtures/*
show_missing = 1

[files]
packages = meme_creator

[flake8]
ignore = E501
import-order-style = google
application-import-names =
    apps
    meme_creator
max-complexity = 10
max-line-length = 99
exclude =
    */migrations/*
    .venv/*
    node_modules/*

[pylint]
# Pylint rules are defined in .pylintrc since it has no setup.cfg configuration

[tool:pytest]
# For loading django settings and configuration (pytest-django plugin)
DJANGO_CONFIGURATION=Test
DJANGO_SETTINGS_MODULE=meme_creator.settings

# For loading the .env file (pytest-dotenv plugin)
env_files = .env

# Standard pytest options
xfail_strict=true
addopts = -p no:warnings --reuse-db -m "not smoketest"
markers =
    smoketest: A smoke test against a live resource.
